# Adapters

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  adapters.h  ranges.cpp  ranges.h
tests/: CMakeLists.txt  test.cpp
